# zvfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
zvfs-core/: CMakeLists.txt  node.cpp  node.hpp  path.cpp  path.hpp  settings.cpp  settings.hpp  vfs.cpp  vfs.hpp
zvfs-core/includes/: zvfs
zvfs-tests/: CMakeLists.txt  example.cpp  tests.cpp
